--- a/A2.vcxproj
+++ b/A2.vcxproj
@@ -99,17 +99,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cards.cpp" />
+    <ClCompile Include="CommandProcessing.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="GameEngineDriver.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="OrderDriver.cpp" />
     <ClCompile Include="Orders.cpp" />
-    <ClCompile Include="OrdersDriver.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cards.h" />
+    <ClInclude Include="CommandProcessing.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="OrderDriver.h" />
     <ClInclude Include="Orders.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
