finished part 5. Y'all just need to implement it into your driver

--- a/Assignment.vcxproj
+++ b/Assignment.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="CommandProcessing.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="GameEngineDriver.cpp" />
+    <ClCompile Include="LoggingObserver.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Orders.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -112,6 +113,7 @@
     <ClInclude Include="Cards.h" />
     <ClInclude Include="CommandProcessing.h" />
     <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="LoggingObserver.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Orders.h" />
     <ClInclude Include="Player.h" />
