--- a/A2.vcxproj
+++ b/A2.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="CommandProcessing.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="GameEngineDriver.cpp" />
+    <ClCompile Include="LoggingObserver.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="OrderDriver.cpp" />
     <ClCompile Include="Orders.cpp" />
@@ -111,6 +112,7 @@
     <ClInclude Include="Cards.h" />
     <ClInclude Include="CommandProcessing.h" />
     <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="LoggingObserver.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="OrderDriver.h" />
     <ClInclude Include="Orders.h" />
