--- a/A2.vcxproj.filters
+++ b/A2.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="OrderDriver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LoggingObserver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cards.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OrderDriver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LoggingObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
