added cheater and neutral player h file

--- a/A2.vcxproj.filters
+++ b/A2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="LoggingObserver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerStrategy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cards.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LoggingObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerStrategy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
