--- a/A2.vcxproj
+++ b/A2.vcxproj
@@ -107,6 +107,7 @@
     <ClCompile Include="OrderDriver.cpp" />
     <ClCompile Include="Orders.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerStrategy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cards.h" />
@@ -117,6 +118,7 @@
     <ClInclude Include="OrderDriver.h" />
     <ClInclude Include="Orders.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerStrategy.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
