--- a/Assignment.vcxproj
+++ b/Assignment.vcxproj
@@ -108,6 +108,8 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Orders.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerStrategy.cpp" />
+    <ClCompile Include="PlayerStrategyDriver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cards.h" />
@@ -117,6 +119,8 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="Orders.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerStrategy.h" />
+    <ClInclude Include="PlayerStrategyDriver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
