--- a/A2.vcxproj.filters
+++ b/A2.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="PlayerStrategy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerStrategyDriver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cards.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerStrategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerStrategyDriver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
